[gd_scene load_steps=5 format=3 uid="uid://pxs6mhmdxdxm"]

[ext_resource type="Script" path="res://world/interactives/Playmat.gd" id="1_1j1y7"]
[ext_resource type="PackedScene" uid="uid://cxkhujs6shlws" path="res://world/interactives/Interactive.tscn" id="1_6o8ws"]
[ext_resource type="Texture2D" uid="uid://c4gr6gwb8op2j" path="res://world/interactives/playmats.png" id="2_g53f1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwk2b"]
size = Vector2(22, 12)

[node name="Playmat" groups=["playmats"] instance=ExtResource("1_6o8ws")]
texture = ExtResource("2_g53f1")
hframes = 4
script = ExtResource("1_1j1y7")

[node name="PlaymatOptions" type="Control" parent="." index="0"]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ShuffleButton" type="Button" parent="PlaymatOptions" index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = -32.0
offset_bottom = -6.0
grow_horizontal = 2
text = "Shuffle"

[node name="SaveButton" type="Button" parent="PlaymatOptions" index="1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 12.0
offset_top = -32.0
offset_right = 66.0
offset_bottom = -6.0
grow_horizontal = 2
text = "Save"

[node name="EditDeckButton" type="Button" parent="PlaymatOptions" index="2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_right = 49.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Edit Deck"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactive" index="0"]
shape = SubResource("RectangleShape2D_iwk2b")

[connection signal="pressed" from="PlaymatOptions/ShuffleButton" to="." method="_on_shuffle_button_pressed"]
[connection signal="pressed" from="PlaymatOptions/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PlaymatOptions/EditDeckButton" to="." method="_on_edit_deck_button_pressed"]
